@@ -1,1 +1,1 @@
-DIST kernel-1.16.tar.gz 5801 RMD160 2307376827f5ea36e8bf6b35859a6a4aa6791429 SHA1 843f2bb479e48242e9a5588673b0ec5beef23a57 SHA256 303004395c5c1a8328b02946227be451a19d2b5bb68ab32166396a1fef24ad62
+DIST kernel-1.17.tar.gz 5691 RMD160 b571415a23e4a299d94841b0e8287a5e288c052a SHA1 336c120dd590d58fb47868193088023db6d6768b SHA256 2013d488304dc426fa91c7ed9e85774202e0d2a110bb567b514fdd1eb0e9bebc
