@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*kernel-1.17 (06 May 2012)
+
+  06 May 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Makes app-shells/push mandatory.
+
 *kernel-1.16 (04 May 2012)
 
   04 May 2012; Martin Väth <martin@mvath.de>
