@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*form-history-control-1.2.10.3 (05 May 2012)
+
+  05 May 2012; Martin Väth <martin@mvath.de>
+  Bump version. Remove old ebuild.
+
 *form-history-control-1.2.10.2 (29 Jan 2012)
 
   29 Jan 2012; Martin Väth <martin@mvath.de>
